# sadasadam

./: .flake8  .pylintrc  .pylintrc_allowed_to_fail  README.md  config_example.yaml  pyproject.toml  sadasadam.def  sadasadam.dockerfile
.github/workflows/: linting.yml
sadasadam/: cli.py  download.py  force.py  indices.py
